admin now sees merchant orders when visiting that merchants orders page

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -52,5 +52,8 @@
     <td><%= link_to 'Edit Info', edit_user_path(@user), id: "edit-info-link" %></td>
   </tr>
 </table>
-
-  <%= link_to "Upgrade To Merchant", admin_user_path(@user, role: 'merchant_user'), method: :put%> 
+<% if @user.role == 'registered_user' %>
+  <%= link_to "Upgrade To Merchant", admin_user_path(@user, role: 'merchant_user'), method: :put%>
+<% elsif @user.role == 'merchant_user' %>
+  <%= link_to "Downgrade To Registered User", admin_user_path(@user, role: 'registered_user'), method: :put%>
+<% end %>
