--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -7,7 +7,7 @@
     <%=link_to merchant.name, merchant_path(merchant), class: "merchant-link", id: "merchant-name"%>
   <% else %>
     <span id="merchant-name"> merchant.name </span>
-
+  <% end %>
 <tr>
   <% if merchant.status == 'active' && current_admin?%>
     <td><%= link_to 'Disable', admin_user_path(merchant, status: 'disabled'), method: :put, class: "status-link", id: "disable-link" %></td>
