--- a/app/views/dashboard/_merchant_orders.html.erb
+++ b/app/views/dashboard/_merchant_orders.html.erb
@@ -1,10 +1,6 @@
+<h1> Orders </h1>
 <% @orders.each do |order| %>
-<p> Customer Name: <%= order.user.name %> </p>
-<p> Address:  <%= order.user.address %> </p>
-  <% order.item_sort(@merchant_id).each do |item| %>
-<p>  Item Name:         <%= link_to item.name, item_path(item) %>  </p>
-<img>                src=<%= item.img_url %>>
-<p>  Item Price:        <%= item.price %> </p>
-<p>  Item Quantity:  <%= item.order_item_sort(order.id).item_quantity %>  </p>
-  <% end %>
+  <p> Order Id: <%=link_to order.id, order_path(order, merchant_id: @merchant_id) %> </p>
+  <p> Date Made:  <%= order.created_at %> </p>
+  <p> Status:  <%= order.status %> </p>
 <% end %>
