--- a/app/views/dashboard/_merchant_dashboard.html.erb
+++ b/app/views/dashboard/_merchant_dashboard.html.erb
@@ -1,9 +1,9 @@
 <% if current_admin? %>
-  <h3> <%= link_to 'Orders With Your Items', merchant_orders_path(@merchant)%> </h3>
+  <h3> <%= link_to 'Orders With Your Items', merchant_orders_path(@merchant), class: "your-orders-links" %> </h3>
 <% else %>
-  <h3> <%= link_to 'Orders With Your Items', dashboard_orders_path%> </h3>
+  <h3> <%= link_to 'Orders With Your Items', dashboard_orders_path, class: "your-orders-links" %> </h3>
 <% end %>
-     <%= link_to "Edit Information", edit_user_path(@merchant) %>
+  <h3> <%= link_to "Edit Information", edit_user_path(@merchant), class: "your-orders-links" %> </h3>
 
 <h1> User Information </h1>
 
