--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,2 +1,2 @@
-<h1> <%= current_user.name %> Dashboard </h1>
+<h1 id="dashboard-head" > <%= current_user.name %> Dashboard </h1>
   <%= render partial: 'merchant_dashboard'  %>
