--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,4 +43,5 @@
    font: 400 100px/1.3 'Lobster Two', Helvetica, sans-serif;
    color: black;
    text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
+   margin: 0;
  }
