--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,7 @@
     <% if current_merchant?%>
       <li><%= link_to "Merchant Dashboard", dashboard_path(current_user), class: "link", id:"merchant-dashboard-link" %></li>
     <% elsif current_admin? %>
-      <li><%= link_to "Admin Dashboard", class: "link", id: "admin-dashboard-link" %></li>
+      <li><%= link_to "Admin Dashboard", dashboard_path(current_user, admin_page: 'true'), class: "link", id: "admin-dashboard-link" %></li>
       <li><%= link_to "View All Users", admin_users_path, class: "link", id: "all-users-link" %></li>
     </div>
     <% end %>
