--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -36,6 +36,6 @@
     <% end %>
   </div>
 
-  <div class="item-info">Fastest Fulfillers:</div>
+  <div class="item-info">Fastest fulfilled:</div>
   <div class="item-info">Slowest Shippers:</div>
 </div>
