--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -40,7 +40,7 @@
   </tr>
 
   <tr>
-    <td>1: Fairbanks</td>
+    <td>1: <%= @top_cities_1 %></td>
     <td>1: Johnson City</td>
     <td>1: Utica</td>
   </tr>
