--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,16 @@
-<% if @user.errors.any? %>
-   <div id="error_explanation">
-     <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-     <ul>
-     <% @user.errors.full_messages.each do |message| %>
-       <li><%= message %></li>
-     <% end %>
-     </ul>
-   </div>
- <% end %>
 
 <%= form_for @user do |f| %>
+<% if @user.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+    <% @user.errors.full_messages.each do |message| %>
+    <div><%= message %></div>
+    <% end %>
+
+</div>
+<% end %>
+
   <div class="info-box">
     <%= f.label :full_name %>
     <%= f.text_field :name, id: "name-field", placeholder: "Shelly Marsh" %>
