--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -7,8 +7,8 @@
         <% order_item = item.order_item_sort(@order.id) %>
 <p>  Item Quantity:  <%= order_item.item_quantity %>  </p>
    <% if item.inventory_count >= order_item.item_quantity && order_item.fulfilled? == false%>
-     <%= link_to "Fulfill", dashboard_order_item_path(order_item, fulfilled: true, merchant_id: @merchant_id, order_id: @order.id), method: :put %>
-   <% elsif order_item.item_quantity > item.inventory_count %>
+     <%= link_to "Fulfill", dashboard_order_item_path(order_item, fulfilled: true, merchant_id: @merchant_id, order_id: @order.id, item_id: item.id), method: :put %>
+   <% elsif order_item.item_quantity > item.inventory_count && order_item.fulfilled? == false%>
      <p> This Item is Can Not Be Fulfilled </p>
    <% elsif order_item.fulfilled? == true %>
      <p> This Item is Fulfilled <p>
