--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,6 @@
   font-family: monospace;
 }
 
-
  body {
    padding: 0px;
    margin: 0px;
@@ -43,4 +42,5 @@
    font: 400 100px/1.3 'Lobster Two', Helvetica, sans-serif;
    color: black;
    text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
+   margin: 0;
  }
