--- a/app/assets/stylesheets/admin-user.css
+++ b/app/assets/stylesheets/admin-user.css
@@ -1,10 +1,13 @@
-#user-info {
+#user-info, #user-stats {
   margin: 50px;
   padding: 0px;
-  float: left;
   width: 600px;
 }
 
 #edit-info-link {
   font-size: 2em;
+}
+
+#headline {
+
 }
