--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -5,9 +5,9 @@
 
 <tr>
   <% if current_admin? %>
-    <%=link_to merchant.name, merchant_path(merchant), class: "merchant-link", id: "merchant-name"%>
+    <td><%=link_to merchant.name, merchant_path(merchant), class: "merchant-link", id: "merchant-name"%></td>
   <% else %>
-    <span id="merchant-name"> merchant.name </span>
+    <td><span id="merchant-name"> <%= merchant.name %> </span></td>
   <% end %>
 
 <tr>
