--- a/app/views/dashboard/_merchant_dashboard.html.erb
+++ b/app/views/dashboard/_merchant_dashboard.html.erb
@@ -4,9 +4,7 @@
   <%= link_to 'Orders With Your Items', dashboard_orders_path, class: "your-orders-links" %>
 <% end %>
 
- <%= link_to "Edit Information", edit_user_path(@merchant) %>
-
- <%= link_to "View My Items", dashboard_items_path %>
+ <%= link_to "View My Items", dashboard_items_path, class:"your-orders-links" %>
 
 <table id="user-info">
 
