--- a/app/views/dashboard/items/index.html.erb
+++ b/app/views/dashboard/items/index.html.erb
@@ -1,30 +1,26 @@
 <h1>My Items</h1>
 
-<%= link_to "Add a new item", new_dashboard_item_path %>
-
+<div><%= link_to "Add a new item", new_dashboard_item_path, class: "new-item-link"%></div>
 
 <% @items.each do |item| %>
 
-
-  <img src="<%= item.img_url %>" class="dashboard-item-image" alt="dashboard-<%= item.name %>-image">
-  ID: <%= item.id %>
-  Name: <%= item.name %>
-  Price: <%= number_to_currency(item.price) %>
-  Inventory: <%= item.inventory_count %>
-  Status: <%= item.status %>
+  <div class="item-info">ID: <%= item.id %></div>
+  <div class="item-info">Name: <%= item.name %></div>
+  <div class="item-info">Price: <%= number_to_currency(item.price) %></div>
+  <div class="item-info">Inventory: <%= item.inventory_count %></div>
 
   <% if item.status == 'active'%>
-    <td id="enable-link"><%= item.status %></td>
-    <td id="item-#{item.id}" ><%= link_to 'Disable', dashboard_item_path(item, status: 'disable'), method: :put, class: "status-link", id: "disable-link"%>
-    </td>
+    <div class="item-info">Status: <%= item.status %></div>
+    <div id="item-#{item.id}" ><%= link_to 'Disable', dashboard_item_path(item, status: 'disable'), method: :put, class: "status-link", id: "disable-link"%>
+    </div>
   <% else %>
-    <td id="disable-link"><%= item.status %></td>
-    <td id="item-#{item.id}" >
+    <div class="item-info">Status: <%= item.status %></div>
+    <div id="item-#{item.id}" >
       <%= link_to 'Enable', dashboard_item_path(item, status: 'enable'), method: :put, class: "status-link", id: "enable-link" %>
-    </td>
+    </div>
   <% end %>
 
-
-  <%= link_to "Edit this item", edit_dashboard_item_path(item.id) %>
+  <div><%= link_to "Edit this item", edit_dashboard_item_path(item.id), class: "status-link", id: "edit-link"%></div>
+  <img src="<%= item.img_url %>" class="item-big-image" alt="dashboard-<%= item.name %>-image">
 
 <% end %>
