--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,7 +1,6 @@
+<h1>Edit <%= @item.name %> </h1>
 
-
-<%= form_for [@user, @item], url: dashboard_items_path do |f| %>
-
+<%= form_for @item do |f| %>
 <% if @item.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
@@ -21,14 +20,14 @@
       <%= f.label :price %>
       <%= f.text_field :price, id: "item-price-field", placeholder: "Item Price" %>
     </div>
-    <span>
+    <div>
       <%= f.label :img_url %>
       <%= f.text_field :img_url, id: "item-img-field", placeholder: "URL for item image"%>
-    </span>
-    <span>
+    </div>
+    <div>
       <%= f.label :inventory_count %>
       <%= f.text_field :inventory_count, id: "item-inventory-field", placeholder: "quantity in inventory"%>
-    </span>
+    </div>
     <div>
       <%= f.label :description %>
       <%= f.text_area :description, id: "item-description-field", placeholder: "description of item" %>
