--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,12 +1,13 @@
 <%= form_for @user do |f| %>
 
 <% if @user.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-     <% @user.errors.full_messages.each do |message| %>
-    <div><%= message %></div>
-    <% end %>
- </div>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this item from being saved:</h2>
+      <% @user.errors.full_messages.each do |message| %>
+        <div><%= message %></div>
+      <% end %>
+    </div>
+
 <% end %>
 
 
