--- a/app/views/dashboard/items/index.html.erb
+++ b/app/views/dashboard/items/index.html.erb
@@ -1,4 +1,6 @@
-<h1>My Items</h1>
+
+
+<h1>Items</h1>
 
 
 <div><%= link_to "Add a new item", new_dashboard_item_path, class: "new-item-link"%></div>
