--- a/app/views/dashboard/_merchant_orders.html.erb
+++ b/app/views/dashboard/_merchant_orders.html.erb
@@ -1,6 +1,6 @@
-<h1> Orders </h1>
 <% @orders.each do |order| %>
-  <p> Order Id: <%=link_to order.id, order_path(order, merchant_id: @merchant_id) %> </p>
-  <p> Date Made:  <%= order.created_at %> </p>
-  <p> Status:  <%= order.status %> </p>
+  <div class="item-info"> Order Id: <%=link_to order.id, order_path(order, merchant_id: @merchant_id) %> </div>
+  <div class="item-info">> Date Made:  <%= order.created_at.strftime('%D') %> </div>
+  <div class="item-info">> Date Updated:  <%= order.updated_at.strftime('%D') %> </div>
+  <div class="item-info">> Status:  <%= order.status %> </div>
 <% end %>
