--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,40 +1,59 @@
 <% @num_items = 3 %>
-<div id="nav-bar">
-  <ul>
-    <li><%= link_to "Return to Welcome Page", root_path, class: "link", id: "welcome-link" %></li>
-    <li><%= link_to "Browse All Items", items_path, class: "link", id: "browse-items-link" %></li>
-
-    <li><%= link_to "See Merchants", merchants_path, class: "link", id: "browse-merchants-link" %></li>
-
-    <li><%= link_to "View Cart", cart_path, class: "link", id: "view-cart-link" %></li>
-
-    <li id="num-items">Cart:(<%= @cart.count_all %> items)</li>
-  <% if current_user.nil? %>
-    <li><%= link_to "Log In", login_path, class: "link", id: "login-link" %></li>
-    <li><%= link_to "Register", new_user_path, class: "link", id: "register-link" %></li>
-  </ul>
-  <% else %>
-
-    <li><%= link_to "My Profile", profile_path, class: "link", id: "profile-link" %></li>
-
-    <% if current_user.orders.count > 0 %>
-        <li><%= link_to "My Orders", profile_orders_path, class: "link", id: "orders-link" %></li>
-    <% end %>
-
-    <li><%= link_to "Log Out", logout_path, method: :delete, class: "link", id: "logout-link" %></li>
-    <% if current_merchant?%>
-      <li><%= link_to "Merchant Dashboard", dashboard_path(current_user), class: "link", id:"merchant-dashboard-link" %></li>
-    <% elsif current_admin? %>
-      <li><%= link_to "Admin Dashboard", dashboard_path(current_user, admin_page: 'true'), class: "link", id: "admin-dashboard-link" %></li>
-      <li><%= link_to "View All Users", admin_users_path, class: "link", id: "all-users-link" %></li>
+<header>
+  <div class="top-header">
+    <section class="hamburger-menu">
+      <input id="toggle" type="checkbox">
+      <label class="toggle-container" for="toggle">
+        <div id="hamburger" class="hamburger-icon">
+          <div id="top-bar" class="bar"> </div>
+          <div id="mid-bar" class="bar"> </div>
+          <div id="bottom-bar" class="bar"> </div>
+        </div>
+      </label>
+      <nav class="side-nav">
+        <% if !current_user.nil? %>
+          <h3 class="welcome-user">Welcome <%= current_user.name %></h3>
+        <% else %>
+          <h3 class="welcome-user">Welcome</h3>
+        <% end %>
+        <%= link_to "Home", root_path, class: "link", id: "welcome-link" %>
+        <%= link_to "Merchants", merchants_path, class: "link", id: "browse-merchants-link" %>
+        <%= link_to "All Items", items_path, class: "link", id: "browse-items-link" %>
+      </nav>
+    </section>
+    <h1 class="welcome-header">Little Shop</h1>
+    <input class="item-nav-search" type="text">
+    <input class="nav-search-button" type="button">
+    <span>
+      <% if current_user.nil? %>
+        <%= link_to "Log In", login_path, class: "link login-link" %>
+        <%= link_to "Register", new_user_path, class: "link", id: "register-link" %>
+      <% else %>
+        <%= link_to "My Profile", profile_path, class: "link", id: "profile-link" %>
+        <% if current_user.orders.count > 0 %>
+          <%= link_to "My Orders", profile_orders_path, class: "link", id: "orders-link" %>
+        <% end %>
+        <%= link_to "Log Out", logout_path, method: :delete, class: "link", id: "logout-link" %>
+        <% if current_merchant? %>
+          <%= link_to "Merchant Dashboard", dashboard_path(current_user), class: "link", id:"merchant-dashboard-link" %>
+        <% elsif current_admin? %>
+          <%= link_to "Admin Dashboard", dashboard_path(current_user, admin_page: 'true'), class: "link", id: "admin-dashboard-link" %>
+          <%= link_to "View All Users", admin_users_path, class: "link", id: "all-users-link" %>
+        <% end %>
+      <% end %>
+    </span>
+    <a class="link view-cart-link" href="/cart">
+      <p class="cart-count"><%= @cart.count_all %></p>
+      <span>Cart</span>
+    </a>
+  </div>
+  <nav id="nav-bar">
+    <ul class="nav-links">
+    </ul>
+    <% if !current_user.nil? %>
+    <div class="logged-in-as">
+      Logged-in as: <%= current_user.name %>
     </div>
     <% end %>
-
-  <% end %>
-</ul>
-<% if !current_user.nil? %>
-<div id="logged-in-as">
-  Logged-in as: <%= current_user.name %>
-</div>
-<% end %>
-</div>
+  </nav>
+</header>
