--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -56,5 +56,5 @@
 <% if @user.role == 'registered_user' %>
   <%= link_to "Upgrade To Merchant", admin_user_path(@user, role: 'merchant_user'), method: :put, class: "upgrade-user-status" %>
 <% elsif @user.role == 'merchant_user' %>
-  <div class: "upgrade-user-status"><%= link_to "Downgrade To Registered User", admin_user_path(@user, role: 'registered_user'), method: :put  %></div>
+  <div class="upgrade-user-status"><%= link_to "Downgrade To Registered User", admin_user_path(@user, role: 'registered_user'), method: :put  %></div>
 <% end %>
