--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,6 +1,6 @@
 <h1 id="all-merchants-header"> All Merchants </h1>
 
-<table id="users-table">
+<table class="users-table">
 <% @merchants.each do |merchant| %>
 
 <tr>
@@ -12,7 +12,7 @@
 
 <tr>
   <% if merchant.status == 'active' && current_admin?%>
-    <td><%= link_to 'Disable', admin_user_path(merchant, status: 'disabled'), method: :put, class: "status-link", id: "disable-link" %></td>
+    <td><%= link_to 'Disable', admin_user_path(merchant, status: 'disabled'), method: :patch, class: "status-link", id: "disable-link" %></td>
   <% elsif  merchant.status == 'disabled' && current_admin? %>
     <td><%= link_to 'Enable', admin_user_path(merchant, status: 'active'), method: :put, class: "status-link", id: "enable-link" %></td>
   <% else %>
