--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <% @num_items = 3 %>
 <header>
-  <div class="top-header">
+  <div class="page-header">
     <section class="hamburger-menu">
       <input id="toggle" type="checkbox">
       <label class="toggle-container" for="toggle">
@@ -19,27 +19,21 @@
         <%= link_to "Home", root_path, class: "link", id: "welcome-link" %>
         <%= link_to "Merchants", merchants_path, class: "link", id: "browse-merchants-link" %>
         <%= link_to "All Items", items_path, class: "link", id: "browse-items-link" %>
+        <% if current_admin? && !current_user.nil?%>
+        <%= link_to "All Users", admin_users_path, class: "link", id: "all-users-link" %>
+        <% end %>
       </nav>
     </section>
     <h1 class="welcome-header">Little Shop</h1>
     <input class="item-nav-search" type="text">
     <input class="nav-search-button" type="button">
-    <span>
+    <span class="user-links">
       <% if current_user.nil? %>
         <%= link_to "Log In", login_path, class: "link login-link" %>
-        <%= link_to "Register", new_user_path, class: "link", id: "register-link" %>
+        <%= link_to "Register", new_user_path, class: "link register-link" %>
       <% else %>
-        <%= link_to "My Profile", profile_path, class: "link", id: "profile-link" %>
-        <% if current_user.orders.count > 0 %>
-          <%= link_to "My Orders", profile_orders_path, class: "link", id: "orders-link" %>
-        <% end %>
+        <%= link_to "My Profile", profile_path, class: "link profile-link" %>
         <%= link_to "Log Out", logout_path, method: :delete, class: "link", id: "logout-link" %>
-        <% if current_merchant? %>
-          <%= link_to "Merchant Dashboard", dashboard_path(current_user), class: "link", id:"merchant-dashboard-link" %>
-        <% elsif current_admin? %>
-          <%= link_to "Admin Dashboard", dashboard_path(current_user, admin_page: 'true'), class: "link", id: "admin-dashboard-link" %>
-          <%= link_to "View All Users", admin_users_path, class: "link", id: "all-users-link" %>
-        <% end %>
       <% end %>
     </span>
     <a class="link view-cart-link" href="/cart">
@@ -47,13 +41,19 @@
       <span>Cart</span>
     </a>
   </div>
-  <nav id="nav-bar">
-    <ul class="nav-links">
-    </ul>
+  <nav class="lower-nav">
     <% if !current_user.nil? %>
-    <div class="logged-in-as">
-      Logged-in as: <%= current_user.name %>
-    </div>
+      <p class="logged-in-as">
+        Logged-in as: <span class="user-name"><%= current_user.name %></span>
+      </p>
+      <% if current_merchant? %>
+        <%= link_to "Merchant Dashboard", dashboard_path(current_user), class: "link", id:"merchant-dashboard-link" %>
+      <% elsif current_admin? %>
+        <%= link_to "Admin Dashboard", dashboard_path(current_user, admin_page: 'true'), class: "link", id: "admin-dashboard-link" %>
+      <% end %>
+      <% if current_user.orders.count > 0 %>
+        <%= link_to "My Orders", profile_orders_path, class: "link", id: "orders-link" %>
+      <% end %>
     <% end %>
   </nav>
 </header>
