--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,12 @@
 
   <body>
     <%= render partial: 'layouts/navbar'  %>
+    <main>
+      <% flash.each do |name, value| %>
+        <div class="flash"> <%= value %> </div>
+      <% end %>
 
-    <% flash.each do |name, value| %>
-      <div class="flash"> <%= value %> </div>
-    <% end %>
-
-    <%= yield %>
+      <%= yield %>
+    </main>
   </body>
 </html>
