--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,14 +1,10 @@
-<h1>Your Shopping Cart</h1>
 <div class="cart">
-
+  <h1 class="page-title">Your Shopping Cart</h1>
   <% if @cart.count_all == 0 %>
-  <div>You have no items in your cart</div>
-
+    <p>You have no items in your cart</p>
   <% elsif @cart.items %>
-
     <ul id="all-items-box">
       <% @cart.items.each do |item| %>
-
         <div class="item-list" id="item-list<%= item.id %>">
           <%= link_to "Remove", cart_path(item_id: item.id, thing: "delete"), method: :put, class: "cart-link", id: "remove-item-link" %>
           <%= link_to "-", cart_path(item_id: item.id, thing: "decrease"), method: :put, class: "increment-link", id: "drop-one" %>
@@ -18,31 +14,24 @@
           <%= @cart.quantity(item.id) %>
           <%= item.name %>
           <em><%= @cart.merchant(item.id).name %></em>
-
           <span class="price">
             <%= number_to_currency(item.price * @cart.quantity(item.id)) %>
           </span>
         </div>
-
       <% end %>
     </ul>
-
   <% end %>
-
-  <div id="login-or-register">
-    <span id="cart-total">Total: <%= number_to_currency(@cart.total_price) %> </span>
-
-    <%= link_to "Empty Cart", cart_path, method: :delete, class: "cart-link", id: "empty-cart-link" %>
-
-    <% unless current_user %>
-      You must
-      <%= link_to "Register", new_user_path %> or
-      <%= link_to "Login", login_path %>
-      to checkout
-    <% end %>
-
-    <% if current_user %>
-    <%= link_to "Checkout", user_orders_path(current_user), method: :post, class: "cart-link", id: "checkout-link" %>
-    <% end %>
-  </div>
+</div>
+<div class="login-or-register">
+  <span class="cart-total">Total: <%= number_to_currency(@cart.total_price) %> </span>
+  <%= link_to "Empty Cart", cart_path, method: :delete, class: "cart-link empty-cart-link" %>
+  <% unless current_user %>
+  <span class="right-text"> You must </span>
+  <%= link_to "Register", new_user_path %> or
+  <%= link_to "Login", login_path %>
+  <span> to checkout </span>
+  <% end %>
+  <% if current_user %>
+  <%= link_to "Checkout", user_orders_path(current_user), method: :post, class: "cart-link checkout-link" %>
+  <% end %>
 </div>
