--- a/app/assets/stylesheets/carts.css
+++ b/app/assets/stylesheets/carts.css
@@ -4,10 +4,6 @@
   padding: 20px;
 }
 
-.page-title {
-  margin-bottom: 15px;
-}
-
 .increment-link {
   text-decoration: none;
   font-size: 0.7em;
@@ -96,4 +92,5 @@
   text-decoration: none;
   color: #5E9CFE;
   margin: 4px;
+  border: none !important;
 }
