--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -1,11 +1,4 @@
-form {
-  background: #AAAAAA;
-  margin: 50px 10%;
-  padding: 50px 40px;
-}
-
 input, select {
-  /* padding: 12px 20px; */
   font-size: 1em;
   margin: 8px 0;
   display: inline-block;
@@ -24,6 +17,12 @@ input, select {
   margin-right: 0px;
 }
 
+.register-form > form > .info-box {
+  padding: 0px;
+  margin: 0px;
+  margin-top: 10px;
+}
+
 .info-box > input {
   display: block;
   height: 35px;
@@ -34,7 +33,7 @@ input, select {
 }
 
 .info-box > label {
-  font-size: .7em
+  font-size: .7em;
 }
 
 .sign-in-form {
@@ -42,38 +41,49 @@ input, select {
   max-width: 400px;
 }
 
+.register-form {
+  min-width: 500px;
+  max-width: 600px;
+  padding-left: 50px;
+  padding-top: 20px;
+}
+
 .login-button {
   text-align: center;
 }
 
-.login-button > input {
+.form-button {
+  margin-top: 20px;
+}
+
+.form-button > input {
   margin: 0px auto;
+  margin-top: 20px;
   display: block;
   width: 50%;
   margin-bottom: 20px;
-  height: 40px;
+  height: 46px;
   background-image: linear-gradient(#5E9CFE 60%, white 80%, #5E9CFE 100%);
   font-size: 1.4em;
   cursor: pointer;
+  color: white;
+  padding-bottom: 12px;
 }
 
-.login-button > input:hover {
+.form-button > input:hover {
   background-image: linear-gradient(#5E9CFE 80%, white 95%, #5E9CFE 100%);
 }
 
-#address-field {
-  width: 450px;
+.address-info {
+  display: flex;
+  width: 90%;
 }
 
-#state-field {
-  width: 50px;
+.address-info > span {
+  margin: 0px;
+  padding: 0px;
 }
 
-#zipcode-field{
-  font-size: 1em;
-  width: 100px;
-}
-
-#email-field {
-  width: 450px;
+.zipcode-field{
+  width: 130px !important;
 }
